2014-05-12  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Create bbdb-pkg.el from bbdb-pkg.el.in.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	Do not treat bbdb-change-hook special when inside
	bbdb-notice-mail-hook or bbdb-notice-record-hook.
	* lisp/bbdb.el (bbdb-notice-mail-hook, bbdb-notice-record-hook):
	Update docstring.
	(bbdb-notice-hook-pending): Remove.
	(bbdb-change-record): Always call bbdb-change-hook if a record was
	changed.
	* lisp/bbdb-mua.el (bbdb-update-records, bbdb-annotate-message):
	Change accordingly.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	Allow arbitrary lisp expressions as values of xfields.
	* lisp/bbdb.el (bbdb-record-type): Update accordingly.
	(bbdb-string-trim): New optional arg null.
	(bbdb-record-xfield-intern): Return xfield value unmodified if it
	is not a string.
	(bbdb-record-xfield-string): New function.
	(bbdb-record-xfield-split): Throw error if xfield value is not a
	string.
	(bbdb-record-set-xfield, bbdb-record-set-field)
	(bbdb-merge-xfield, bbdb-display-record-one-line)
	(bbdb-display-record-multi-line)
	* lisp/bbdb-com.el (bbdb-search, bbdb-read-field)
	(bbdb-edit-field, bbdb-read-xfield): Allow xfield values that are
	not a string.
	(bbdb-add-mail-alias): Simplify.

2014-05-06  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-parse-postcode): Finish immediately if one
	test succeeds.

2014-04-27  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.1.2.
	* NEWS: Update for release.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Be more careful that empty strings do not pollute the data base.
	* lisp/bbdb.el (bbdb-list-strings): New function.
	(bbdb-record-set-field): Use it.
	(bbdb-record-set-xfield): Clean up.
	* lisp/bbdb-com.el (bbdb-fix-records): New command.
	(bbdb-read-organization, bbdb-complete-mail): Check emacs version
	properly.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	Check type of record data structures more carefully.